# splitbills_mailing

./: .gitignore  cors.py  index.html  mailing.py  main.py  pyproject.toml  schema.py  script.js  style.css
